--- a/fb.css
+++ b/fb.css
@@ -51,3 +51,27 @@ body{
     margin: 0;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
+
+.main-body{
+background: linear-gradient(white,#D3D8E8);
+width: 100%;
+height: 600px;
+}
+.body-left{
+width: 50%;
+float: left;
+padding-left:180px;
+padding-top: 40px;
+}
+.body-right{
+  width: 50%;  
+  float: left;
+}
+.para{
+    font-weight: bold;
+    font-size: 20px;
+
+}
+.connect-image{
+    width: 600px;
+}
