--- a/fb.css
+++ b/fb.css
@@ -58,14 +58,15 @@ width: 100%;
 height: 600px;
 }
 .body-left{
-width: 50%;
+width: 45%;
 float: left;
 padding-left:180px;
 padding-top: 40px;
 }
 .body-right{
-  width: 50%;  
+  width: 30%;  
   float: left;
+  padding-top: 5px;
 }
 .para{
     font-weight: bold;
@@ -74,4 +75,39 @@ padding-top: 40px;
 }
 .connect-image{
     width: 600px;
+}
+.create-account{
+    font-size: 35px;
+}
+.its-quick{
+    font-size: 10px;
+}
+
+.conditions{
+    text-decoration: none;
+    font-size: 13px;
+    color: rgb(7, 70, 163);
+}
+#signup{
+    background-color: #3e8728;
+    color: #fff;
+    width: 200px;
+    height: 50px;
+    border: none;
+    border-radius: 7px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.input-box{
+    height: 30px;
+    width: 180px;
+    border-radius: 5px;
+    border-color: #80808059;
+}
+.input-box-2{
+    height: 30px;
+    width: 372px;
+    border-radius: 5px;
+    border-color: #80808059;
 }
