--- a/fb.css
+++ b/fb.css
@@ -111,3 +111,7 @@ padding-top: 40px;
     border-radius: 5px;
     border-color: #80808059;
 }
+.footer{
+    font-size: 13px;
+     padding-left: 2in; 
+}
