--- a/fb.css
+++ b/fb.css
@@ -55,7 +55,7 @@ body{
 .main-body{
 background: linear-gradient(white,#D3D8E8);
 width: 100%;
-height: 600px;
+height: 750px;
 }
 .body-left{
 width: 45%;
@@ -64,7 +64,7 @@ padding-left:180px;
 padding-top: 40px;
 }
 .body-right{
-  width: 30%;  
+  width: 40%;  
   float: left;
   padding-top: 5px;
 }
@@ -114,4 +114,9 @@ padding-top: 40px;
 .footer{
     font-size: 13px;
      padding-left: 2in; 
+     padding-right: 3in;
+}
+label.error {
+    display: inline-block;
+    font-size: 12px;
 }
